--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -1,5 +1,5 @@
 ---
-# Source: crds/agent.everoute.io_agentinfos.yaml
+# Source: everoute/crds/agent.everoute.io_agentinfos.yaml
 
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -129,7 +129,7 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/group.everoute.io_endpointgroups.yaml
+# Source: everoute/crds/group.everoute.io_endpointgroups.yaml
 
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -325,7 +325,7 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/group.everoute.io_groupmembers.yaml
+# Source: everoute/crds/group.everoute.io_groupmembers.yaml
 
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -418,7 +418,7 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/group.everoute.io_groupmemberspatches.yaml
+# Source: everoute/crds/group.everoute.io_groupmemberspatches.yaml
 
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -578,7 +578,7 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/security.everoute.io_endpoints.yaml
+# Source: everoute/crds/security.everoute.io_endpoints.yaml
 
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -708,7 +708,7 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/security.everoute.io_globalpolicies.yaml
+# Source: everoute/crds/security.everoute.io_globalpolicies.yaml
 
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -776,7 +776,7 @@ status:
   storedVersions: []
 
 ---
-# Source: crds/security.everoute.io_securitypolicies.yaml
+# Source: everoute/crds/security.everoute.io_securitypolicies.yaml
 
 ---
 apiVersion: apiextensions.k8s.io/v1
