--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,7 +54,7 @@ jobs:
     steps:
       - uses: actions/setup-go@v3
         with:
-          go-version: '1.20'
+          go-version: '1.22'
 
       - uses: actions/checkout@v2
 
@@ -111,6 +111,10 @@ jobs:
     runs-on: [self-hosted, pod-k8s-e2e-v2]
     steps:
       - uses: actions/checkout@v2
+
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '1.22'
 
       - name: config PATH
         run: |
@@ -208,6 +212,10 @@ jobs:
       - name: run hostport cases
         timeout-minutes: 10
         run: ./k8se2e/bin/ginkgo -nodes=5 --skip="SCTP|IPv6" --focus="KubeProxy|HostPort|hostPort" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
+
+      - name: run securitypolicy cases
+        timeout-minutes: 30
+        run: Kubeconfig=/home/runner/.kube/config Provider=pod go test ./tests/e2e/...
 
       - name: delete test k8s cluster
         id: delenv
