fix(er-941): doesn't del learning ip for vm migrate

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -28,6 +28,7 @@ run:
 issues:
   exclude-files:
     - ".*_test.go$"
+    - plugin/tower/pkg/server/fake/graph/resolver/types.resolvers.go
     - "plugin/tower/pkg/server/fake/graph/resolver/*.resolvers.go"
   exclude-dirs:
     - tests/e2e
