--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,20 +34,20 @@ jobs:
           context: ./build/images/generate/
           push: true
 
-  pr-check:
-    needs: [build-unit-test-image, static-check, generate-check]
-    runs-on: [self-hosted, pod]
-    strategy:
-      matrix:
-        act: [docker-test-ci, docker-race-test-ci, docker-cover-test-ci]
-    steps:
-      - uses: actions/checkout@v2
+  # pr-check:
+  #   needs: [build-unit-test-image, static-check, generate-check]
+  #   runs-on: [self-hosted, pod]
+  #   strategy:
+  #     matrix:
+  #       act: [docker-test-ci, docker-race-test-ci, docker-cover-test-ci]
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-      - name: run everoute unit test
-        run: make ${{ matrix.act }}
-      - uses: codecov/codecov-action@v2
-        with:
-          files: ./coverage.out
+  #     - name: run everoute unit test
+  #       run: make ${{ matrix.act }}
+  #     - uses: codecov/codecov-action@v2
+  #       with:
+  #         files: ./coverage.out
 
   static-check:
     runs-on: [self-hosted, pod]
@@ -72,14 +72,14 @@ jobs:
           version: v1.59.1
           only-new-issues: true
 
-  run-e2e:
-    runs-on: [self-hosted, pod]
-    needs: [static-check, generate-check, pr-check]
-    steps:
-      - uses: actions/checkout@v2
+  # run-e2e:
+  #   runs-on: [self-hosted, pod]
+  #   needs: [static-check, generate-check, pr-check]
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-      - name: run everoute e2e test
-        run: sudo make docker-e2e-test-ci
+  #     - name: run everoute e2e test
+  #       run: sudo make docker-e2e-test-ci
 
   build-k8s-e2e-image:
     runs-on: [self-hosted, build]
@@ -95,7 +95,7 @@ jobs:
           push: true
 
   run-k8s-e2e:
-    needs: [build-k8s-e2e-image, static-check, generate-check, pr-check]
+    needs: [build-k8s-e2e-image, static-check, generate-check]
     strategy:
       fail-fast: false
       matrix:
@@ -197,14 +197,14 @@ jobs:
           kubectl --kubeconfig /home/runner/sksconfig/sksconfig get ksc ${{ env.CLUSTER_NAME }}
           kubectl get nodes -owide
 
-      - name: run ServiceProxy cases
-        if: matrix.enable-proxy == true
-        timeout-minutes: 20
-        run: ./k8se2e/bin/ginkgo -nodes=5 --skip="NodePort|SCTP|hairpin|ProxyTerminatingEndpoints|IPv6|Networking" --focus="Services" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
+      # - name: run ServiceProxy cases
+      #   if: matrix.enable-proxy == true
+      #   timeout-minutes: 20
+      #   run: ./k8se2e/bin/ginkgo -nodes=5 --skip="NodePort|SCTP|hairpin|ProxyTerminatingEndpoints|IPv6|Networking" --focus="Services" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
 
-      - name: run NetworkPolicy case
-        timeout-minutes: 50
-        run: ./k8se2e/bin/ginkgo -nodes=10 --skip="SCTP|NetworkPolicyLegacy" --focus="NetworkPolicy" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
+      # - name: run NetworkPolicy case
+      #   timeout-minutes: 50
+      #   run: ./k8se2e/bin/ginkgo -nodes=10 --skip="SCTP|NetworkPolicyLegacy" --focus="NetworkPolicy" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
 
       - name: run hostport cases
         timeout-minutes: 10
@@ -263,7 +263,7 @@ jobs:
 
   slack-notification:
     if: ${{ always() }}
-    needs: [ pr-check,static-check,run-e2e,run-k8s-e2e,generate-check ]
+    needs: [ static-check,run-k8s-e2e,generate-check ]
     runs-on: [self-hosted, pod]
     env:
       SLACK_COLOR: 2EA44F
@@ -274,8 +274,8 @@ jobs:
       RESULT_RUN_TOWER_E2E: ":white_check_mark:"
       RESULT_GENERATE_CHECK: ":white_check_mark:"
     steps:
-      - if: ${{ needs.pr-check.result == 'failure'}}
-        run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_PR_CHECK=:x:" >> $GITHUB_ENV
+      # - if: ${{ needs.pr-check.result == 'failure'}}
+      #   run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_PR_CHECK=:x:" >> $GITHUB_ENV
       - if: ${{ needs.static-check.result == 'failure'}}
         run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_STATIC_CHECK=:x:" >> $GITHUB_ENV
       - if: ${{ needs.run-e2e.result == 'failure'}}
@@ -287,8 +287,8 @@ jobs:
       - if: ${{ needs.generate-check.result == 'failure'}}
         run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_GENERATE_CHECK=:x:" >> $GITHUB_ENV
 
-      - if: ${{ needs.pr-check.result == 'cancelled'}}
-        run: echo "RESULT_PR_CHECK=:ballot_box_with_check:" >> $GITHUB_ENV
+      # - if: ${{ needs.pr-check.result == 'cancelled'}}
+      #   run: echo "RESULT_PR_CHECK=:ballot_box_with_check:" >> $GITHUB_ENV
       - if: ${{ needs.static-check.result == 'cancelled'}}
         run: echo "RESULT_STATIC_CHECK=:ballot_box_with_check:" >> $GITHUB_ENV
       - if: ${{ needs.run-e2e.result == 'cancelled'}}
