--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -260,7 +260,11 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: make docker-generate-ci
-        run: sudo sh -c "make docker-generate-ci"
+        uses: nick-fields/retry@v2
+        with:
+          timeout_minutes: 5
+          max_attempts: 2
+          command: sudo sh -c "make docker-generate-ci"
 
       - name: check if code changes
         run: sudo sh -c "git add -A && git diff HEAD --exit-code"
