--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,7 +72,7 @@ jobs:
       - name: Check golang lint
         # skip it for branch main can't pass this check
         if: ${{ github.event_name == 'pull_request' }}
-        uses: golangci/golangci-lint-action@v6
+        uses: qingwusunny/golangci-lint-action@v1.0.0
         with:
           version: v1.60.1
           only-new-issues: true
@@ -260,7 +260,11 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: make docker-generate-ci
-        run: sudo sh -c "make docker-generate-ci"
+        uses: nick-fields/retry@v2
+        with:
+          timeout_minutes: 5
+          max_attempts: 2
+          command: sudo sh -c "make docker-generate-ci"
 
       - name: check if code changes
         run: sudo sh -c "git add -A && git diff HEAD --exit-code"
