fix(ER-1114): add crc event source in tower plugin

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -31,7 +31,8 @@ run:
 issues:
   exclude-files:
     - ".*_test.go$"
-    - "plugin/tower/pkg/server/fake/graph/resolver/*.resolvers.go"
+    - plugin/tower/pkg/server/fake/graph/resolver/query.resolvers.go
+    - plugin/tower/pkg/server/fake/graph/resolver/types.resolvers.go
   exclude-dirs:
     - tests/e2e
 
