ci: spelling check ci

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,8 +66,9 @@ jobs:
       - name: Check conventional commits
         uses: webiny/action-conventional-commits@v1.1.0
 
-      # - name: Check spelling
-      #   uses: crate-ci/typos@v1.0.4
+      - name: Check spelling
+        uses: crate-ci/typos@v1.0.4
+        #uses: crate-ci/typos@v1.16.0
 
       - name: Check golang lint
         # skip it for branch main can't pass this check
