--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,7 +6,7 @@ on:
       - '**'
 
   push:
-    branches: [ main, release-1.0 ]
+    branches: [ main, release-everoute-3.4 ]
 
   schedule:
     # 7:00 UTC+8
@@ -16,13 +16,19 @@ jobs:
   build-unit-test-image:
     runs-on: [self-hosted, build]
     steps:
+      - name: Get short SHA
+        id: sha
+        run: |
+          SHORT_SHA="${GITHUB_SHA:0:7}"
+          echo "short_sha=$SHORT_SHA" >> $GITHUB_OUTPUT
+
       - uses: actions/checkout@v2
 
       - name: build unit-test image
         uses: docker/build-push-action@v4
         with:
           file: build/images/unit-test/Dockerfile
-          tags: registry.smtx.io/everoute/unit-test
+          tags: registry.smtx.io/everoute/unit-test:${{ steps.sha.outputs.short_sha }}
           context: ./build/images/unit-test/
           push: true
 
@@ -30,13 +36,13 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           file: build/images/generate/Dockerfile
-          tags: registry.smtx.io/everoute/generate
+          tags: registry.smtx.io/everoute/generate:${{ steps.sha.outputs.short_sha }}
           context: ./build/images/generate/
           push: true
 
   pr-check:
     needs: [build-unit-test-image, static-check, generate-check]
-    runs-on: [self-hosted, pod]
+    runs-on: [self-hosted, vm]
     strategy:
       matrix:
         act: [docker-race-test-ci, docker-cover-test-ci]
@@ -81,155 +87,155 @@ jobs:
           GOPROXY: https://goproxy.cn|https://proxy.golang.org|direct
 
   run-e2e:
-    runs-on: [self-hosted, pod]
-    needs: [static-check, generate-check, pr-check]
+    runs-on: [self-hosted, vm]
+    needs: [static-check, generate-check]
     steps:
       - uses: actions/checkout@v2
 
       - name: run everoute e2e test
         run: sudo make docker-e2e-test-ci
 
-  build-k8s-e2e-image:
-    runs-on: [self-hosted, build]
-    steps:
-      - uses: actions/checkout@v2
+  # build-k8s-e2e-image:
+  #   runs-on: [self-hosted, build]
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-      - name: build everoute image
-        uses: docker/build-push-action@v4
-        with:
-          file: build/images/release/Dockerfile
-          tags: registry.smtx.io/everoute/everoute_release:${{ github.sha }}
-          context: .
-          push: true
+  #     - name: build everoute image
+  #       uses: docker/build-push-action@v4
+  #       with:
+  #         file: build/images/release/Dockerfile
+  #         tags: registry.smtx.io/everoute/everoute_release:${{ github.sha }}
+  #         context: .
+  #         push: true
 
-  run-k8s-e2e:
-    needs: [build-k8s-e2e-image, static-check, generate-check, pr-check]
-    strategy:
-      fail-fast: false
-      matrix:
-        enable-proxy: [true, false]
-        encap-mode: ["", geneve]
-        include:
-          - ipam: "everoute"
-            enable-proxy: true
-            encap-mode: "geneve"
-    runs-on: [self-hosted, pod-k8s-e2e-v2]
-    steps:
-      - uses: actions/checkout@v2
+  # run-k8s-e2e:
+  #   needs: [build-k8s-e2e-image, static-check, generate-check, pr-check]
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       enable-proxy: [true, false]
+  #       encap-mode: ["", geneve]
+  #       include:
+  #         - ipam: "everoute"
+  #           enable-proxy: true
+  #           encap-mode: "geneve"
+  #   runs-on: [self-hosted, pod-k8s-e2e-v2]
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-      - uses: actions/setup-go@v3
-        with:
-          go-version: '1.22'
+  #     - uses: actions/setup-go@v3
+  #       with:
+  #         go-version: '1.22'
 
-      - name: config PATH
-        run: |
-          mkdir -p /runner/_work/bin/
-          echo "/runner/_work/bin/" >> $GITHUB_PATH
+  #     - name: config PATH
+  #       run: |
+  #         mkdir -p /runner/_work/bin/
+  #         echo "/runner/_work/bin/" >> $GITHUB_PATH
 
-      - name: set env
-        run: |
-          echo "PoolName=$PoolName" >> $GITHUB_ENV
-          echo "Tmpl=$Tmpl" >> $GITHUB_ENV
+  #     - name: set env
+  #       run: |
+  #         echo "PoolName=$PoolName" >> $GITHUB_ENV
+  #         echo "Tmpl=$Tmpl" >> $GITHUB_ENV
 
-      - name: install helm
-        run: cp /home/runner/tool/helm /runner/_work/bin/
+  #     - name: install helm
+  #       run: cp /home/runner/tool/helm /runner/_work/bin/
 
-      - name: install k8se2e binary
-        run: sudo mkdir -p /runner/_work/everoute/everoute/k8se2e && sudo cp -r /home/runner/k8se2e/bin/ /runner/_work/everoute/everoute/k8se2e/bin/
+  #     - name: install k8se2e binary
+  #       run: sudo mkdir -p /runner/_work/everoute/everoute/k8se2e && sudo cp -r /home/runner/k8se2e/bin/ /runner/_work/everoute/everoute/k8se2e/bin/
       
-      - name: generate everoute cni deploy yaml
-        run: helm template deploy/chart -n ci-deploy-cni --set CNIConf.encapMode=${{ matrix.encap-mode }},CNIConf.enableProxy=${{ matrix.enable-proxy }},CNIConf.ipam=${{ matrix.ipam }},image.repository=registry.smtx.io/everoute/everoute_release,image.tag=${{ github.sha }} > deploy/everoute.yaml
+  #     - name: generate everoute cni deploy yaml
+  #       run: helm template deploy/chart -n ci-deploy-cni --set CNIConf.encapMode=${{ matrix.encap-mode }},CNIConf.enableProxy=${{ matrix.enable-proxy }},CNIConf.ipam=${{ matrix.ipam }},image.repository=registry.smtx.io/everoute/everoute_release,image.tag=${{ github.sha }} > deploy/everoute.yaml
 
-      - name: test kubectl connect to sks
-        run: kubectl get crd --kubeconfig /home/runner/sksconfig/sksconfig | grep smart
+  #     - name: test kubectl connect to sks
+  #       run: kubectl get crd --kubeconfig /home/runner/sksconfig/sksconfig | grep smart
 
-      - name: allocate cluster vip
-        run: |
-          while true;do
-            out=$(curl -X POST  'https://ip.dev.smtx.io/v1/ips?name=${{ env.PoolName }}')
-            success=$(echo $out | grep "fullSuccess" |wc -l)
-            if [ $success != 1 ]; then exit 1; fi
-            ipright=${out#*\"ips\":[\"}
-            ip=${ipright%\"],\"ipNets\"*}
-            success=$(ping $ip -c 4 -W 1; echo $?)
-            if [[ $success == 0 ]];then continue; fi
-            break
-          done
-          echo "VIP=$ip" >> $GITHUB_ENV
+  #     - name: allocate cluster vip
+  #       run: |
+  #         while true;do
+  #           out=$(curl -X POST  'https://ip.dev.smtx.io/v1/ips?name=${{ env.PoolName }}')
+  #           success=$(echo $out | grep "fullSuccess" |wc -l)
+  #           if [ $success != 1 ]; then exit 1; fi
+  #           ipright=${out#*\"ips\":[\"}
+  #           ip=${ipright%\"],\"ipNets\"*}
+  #           success=$(ping $ip -c 4 -W 1; echo $?)
+  #           if [[ $success == 0 ]];then continue; fi
+  #           break
+  #         done
+  #         echo "VIP=$ip" >> $GITHUB_ENV
       
-      - name: gen k8s cluster name
-        run: echo "CLUSTER_NAME=k8s-e2e-$RANDOM" >> $GITHUB_ENV
+  #     - name: gen k8s cluster name
+  #       run: echo "CLUSTER_NAME=k8s-e2e-$RANDOM" >> $GITHUB_ENV
 
-      - name: create k8s cluster...
-        run: |
-          echo "new k8s cluster name is ${{ env.CLUSTER_NAME }}"
-          sed -i s/{{k8s-e2e-cluster-name}}/${{ env.CLUSTER_NAME }}/g hack/${{ env.Tmpl }}
-          echo "k8s cluster vip is ${{ env.VIP }}"
-          sed -i s/{{k8s-e2e-cluster-vip}}/${{ env.VIP }}/g hack/${{ env.Tmpl }}
-          kubectl --v=9 apply -f hack/${{ env.Tmpl }} --kubeconfig /home/runner/sksconfig/sksconfig
-          kubectl --kubeconfig /home/runner/sksconfig/sksconfig wait --for=jsonpath='{.status.controlPlaneAvailable}'=true KubeSmartCluster/${{ env.CLUSTER_NAME }} --timeout=10m
+  #     - name: create k8s cluster...
+  #       run: |
+  #         echo "new k8s cluster name is ${{ env.CLUSTER_NAME }}"
+  #         sed -i s/{{k8s-e2e-cluster-name}}/${{ env.CLUSTER_NAME }}/g hack/${{ env.Tmpl }}
+  #         echo "k8s cluster vip is ${{ env.VIP }}"
+  #         sed -i s/{{k8s-e2e-cluster-vip}}/${{ env.VIP }}/g hack/${{ env.Tmpl }}
+  #         kubectl --v=9 apply -f hack/${{ env.Tmpl }} --kubeconfig /home/runner/sksconfig/sksconfig
+  #         kubectl --kubeconfig /home/runner/sksconfig/sksconfig wait --for=jsonpath='{.status.controlPlaneAvailable}'=true KubeSmartCluster/${{ env.CLUSTER_NAME }} --timeout=10m
 
-      - name: get new k8s cluster kubeconfig and test connection
-        run: |
-          kubectl --kubeconfig /home/runner/sksconfig/sksconfig get secret ${{ env.CLUSTER_NAME }}-kubeconfig -o template --template={{.data.value}} > rawkubeconfig
-          mkdir -p $HOME/.kube
-          base64 --decode rawkubeconfig > $HOME/.kube/config
-          kubectl version
+  #     - name: get new k8s cluster kubeconfig and test connection
+  #       run: |
+  #         kubectl --kubeconfig /home/runner/sksconfig/sksconfig get secret ${{ env.CLUSTER_NAME }}-kubeconfig -o template --template={{.data.value}} > rawkubeconfig
+  #         mkdir -p $HOME/.kube
+  #         base64 --decode rawkubeconfig > $HOME/.kube/config
+  #         kubectl version
 
-      - name: delete control plane node taint 
-        run: |
-          kubectl taint node node-role.kubernetes.io/control-plane=:NoSchedule --all --overwrite=true
-          kubectl taint node node-role.kubernetes.io/control-plane=:NoSchedule- --all
-          kubectl taint node node-role.kubernetes.io/master=:NoSchedule --all --overwrite=true
-          kubectl taint node node-role.kubernetes.io/master=:NoSchedule- --all
+  #     - name: delete control plane node taint 
+  #       run: |
+  #         kubectl taint node node-role.kubernetes.io/control-plane=:NoSchedule --all --overwrite=true
+  #         kubectl taint node node-role.kubernetes.io/control-plane=:NoSchedule- --all
+  #         kubectl taint node node-role.kubernetes.io/master=:NoSchedule --all --overwrite=true
+  #         kubectl taint node node-role.kubernetes.io/master=:NoSchedule- --all
 
-      - name: deploy everoute cni
-        run: |
-          kubectl create ns ci-deploy-cni
-          kubectl apply -f deploy/chart/templates/crds/ipam.everoute.io_ippools.yaml
-          echo "wait ippool crd install" && sleep 5
-          kubectl apply -f hack/ippool_ci.yaml
-          kubectl apply -f deploy/everoute.yaml
+  #     - name: deploy everoute cni
+  #       run: |
+  #         kubectl create ns ci-deploy-cni
+  #         kubectl apply -f deploy/chart/templates/crds/ipam.everoute.io_ippools.yaml
+  #         echo "wait ippool crd install" && sleep 5
+  #         kubectl apply -f hack/ippool_ci.yaml
+  #         kubectl apply -f deploy/everoute.yaml
 
-      - name: wait k8s cluster ready
-        timeout-minutes: 30
-        run: |
-          kubectl --kubeconfig /home/runner/sksconfig/sksconfig wait --for=jsonpath='{.status.phase}'=Ready KubeSmartCluster/${{ env.CLUSTER_NAME }} --timeout=20m
-          mastercount=$(kubectl --kubeconfig /home/runner/sksconfig/sksconfig get ksc ${{ env.CLUSTER_NAME }} -o template --template={{.status.controlPlanes.totalCount}})
-          workercount=$(kubectl --kubeconfig /home/runner/sksconfig/sksconfig get ksc ${{ env.CLUSTER_NAME }} -o template --template={{.status.workers.totalCount}})
-          echo "mastercount: $mastercount, workercount: $workercount"
-          kubectl --kubeconfig /home/runner/sksconfig/sksconfig wait --for=jsonpath='{.status.controlPlanes.readyCount}'=$mastercount KubeSmartCluster/${{ env.CLUSTER_NAME }} --timeout=5m
-          kubectl --kubeconfig /home/runner/sksconfig/sksconfig wait --for=jsonpath='{.status.workers.readyCount}'=$workercount KubeSmartCluster/${{ env.CLUSTER_NAME }} --timeout=20m
-          kubectl wait --for=condition=Ready nodes --all --timeout=20m
-          kubectl wait --for=condition=Ready pods --all -A  --timeout=10m
-          kubectl --kubeconfig /home/runner/sksconfig/sksconfig get ksc ${{ env.CLUSTER_NAME }}
-          kubectl get nodes -owide
+  #     - name: wait k8s cluster ready
+  #       timeout-minutes: 30
+  #       run: |
+  #         kubectl --kubeconfig /home/runner/sksconfig/sksconfig wait --for=jsonpath='{.status.phase}'=Ready KubeSmartCluster/${{ env.CLUSTER_NAME }} --timeout=20m
+  #         mastercount=$(kubectl --kubeconfig /home/runner/sksconfig/sksconfig get ksc ${{ env.CLUSTER_NAME }} -o template --template={{.status.controlPlanes.totalCount}})
+  #         workercount=$(kubectl --kubeconfig /home/runner/sksconfig/sksconfig get ksc ${{ env.CLUSTER_NAME }} -o template --template={{.status.workers.totalCount}})
+  #         echo "mastercount: $mastercount, workercount: $workercount"
+  #         kubectl --kubeconfig /home/runner/sksconfig/sksconfig wait --for=jsonpath='{.status.controlPlanes.readyCount}'=$mastercount KubeSmartCluster/${{ env.CLUSTER_NAME }} --timeout=5m
+  #         kubectl --kubeconfig /home/runner/sksconfig/sksconfig wait --for=jsonpath='{.status.workers.readyCount}'=$workercount KubeSmartCluster/${{ env.CLUSTER_NAME }} --timeout=20m
+  #         kubectl wait --for=condition=Ready nodes --all --timeout=20m
+  #         kubectl wait --for=condition=Ready pods --all -A  --timeout=10m
+  #         kubectl --kubeconfig /home/runner/sksconfig/sksconfig get ksc ${{ env.CLUSTER_NAME }}
+  #         kubectl get nodes -owide
 
-      - name: run ServiceProxy cases
-        if: matrix.enable-proxy == true
-        timeout-minutes: 20
-        run: ./k8se2e/bin/ginkgo -nodes=5 --skip="NodePort|SCTP|hairpin|ProxyTerminatingEndpoints|IPv6|Networking" --focus="Services" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
+  #     - name: run ServiceProxy cases
+  #       if: matrix.enable-proxy == true
+  #       timeout-minutes: 20
+  #       run: ./k8se2e/bin/ginkgo -nodes=5 --skip="NodePort|SCTP|hairpin|ProxyTerminatingEndpoints|IPv6|Networking" --focus="Services" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
 
-      - name: run NetworkPolicy case
-        timeout-minutes: 50
-        run: ./k8se2e/bin/ginkgo -nodes=10 --skip="SCTP|NetworkPolicyLegacy" --focus="NetworkPolicy" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
+  #     - name: run NetworkPolicy case
+  #       timeout-minutes: 50
+  #       run: ./k8se2e/bin/ginkgo -nodes=10 --skip="SCTP|NetworkPolicyLegacy" --focus="NetworkPolicy" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
 
-      - name: run hostport cases
-        timeout-minutes: 10
-        run: ./k8se2e/bin/ginkgo -nodes=5 --skip="SCTP|IPv6" --focus="KubeProxy|HostPort|hostPort" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
+  #     - name: run hostport cases
+  #       timeout-minutes: 10
+  #       run: ./k8se2e/bin/ginkgo -nodes=5 --skip="SCTP|IPv6" --focus="KubeProxy|HostPort|hostPort" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
 
-      - name: run securitypolicy cases
-        timeout-minutes: 30
-        run: Kubeconfig=/home/runner/.kube/config Provider=pod go test ./tests/e2e/...
+  #     - name: run securitypolicy cases
+  #       timeout-minutes: 30
+  #       run: Kubeconfig=/home/runner/.kube/config Provider=pod go test ./tests/e2e/...
 
-      - name: delete test k8s cluster
-        id: delenv
-        if: ${{ always() }}
-        run: kubectl --kubeconfig /home/runner/sksconfig/sksconfig delete -f hack/${{ env.Tmpl }}
+  #     - name: delete test k8s cluster
+  #       id: delenv
+  #       if: ${{ always() }}
+  #       run: kubectl --kubeconfig /home/runner/sksconfig/sksconfig delete -f hack/${{ env.Tmpl }}
 
-      - name: recycle vip
-        if: ${{ always() && steps.delenv.conclusion == 'success' }}
-        run: curl -X DELETE "https://ip.dev.smtx.io/v1/ips?name="${{ env.PoolName }}"&ip="${{ env.VIP }}
+  #     - name: recycle vip
+  #       if: ${{ always() && steps.delenv.conclusion == 'success' }}
+  #       run: curl -X DELETE "https://ip.dev.smtx.io/v1/ips?name="${{ env.PoolName }}"&ip="${{ env.VIP }}
   
   # run-tower-e2e:
   #   runs-on: [self-hosted, tower]
@@ -254,13 +260,17 @@ jobs:
   #       run: sudo go test ./tests/e2e/cases/. -v --count=1 --timeout=1h
 
   generate-check:
-    runs-on: [self-hosted, pod]
+    runs-on: [self-hosted, vm]
     needs: [build-unit-test-image]
     steps:
       - uses: actions/checkout@v2
 
       - name: make docker-generate-ci
-        run: sudo sh -c "make docker-generate-ci"
+        uses: nick-fields/retry@v2
+        with:
+          timeout_minutes: 10
+          max_attempts: 2
+          command: sudo sh -c "make docker-generate-ci"
 
       - name: check if code changes
         run: sudo sh -c "git add -A && git diff HEAD --exit-code"
@@ -271,7 +281,7 @@ jobs:
 
   slack-notification:
     if: ${{ always() }}
-    needs: [ pr-check,static-check,run-e2e,run-k8s-e2e,generate-check ]
+    needs: [ pr-check,static-check,run-e2e,generate-check ]
     runs-on: [self-hosted, pod]
     env:
       SLACK_COLOR: 2EA44F
